syntax = "proto3";
option go_package = ".;proto";

service  User{
  rpc GetUserList(PageInfo) returns (UserListRespons);//用户列表
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);//通过用户的手机号查询
  rpc GetUserById(IdRequest) returns (UserInfoResponse);//通过id查询
  rpc CreateUser(CreateUserinfo) returns (UserInfoResponse);//创建用户
  rpc UpdateUser(UpdateUserInfo) returns (Empty);//更新用户
  rpc CheckPassword(PasswordCheckInfo)returns(CheckReponse);//密码检查
}
message PageInfo{
  uint32 pn = 1;
  uint32 pSize = 2;
}
//用户返回结构
message UserInfoResponse{
  int32  id =1 ;
  string password =2;
  string mobile =3;
  string nickName =4;
  uint64 birthday =5;
  string gender = 6;
  int32 role =7;
}
//返回的多个List
message UserListRespons{
  int32 total = 1;
  repeated UserInfoResponse data =2;
}
//使用电话号码查询用户
message MobileRequest{
  string mobile = 1;
}
//密码检查返回结果
message CheckReponse{
  bool success=1;
}
//木马检查
message PasswordCheckInfo{
  string password =1;
  string encrytedPassword =2;
}

message Empty{

}
//修改用户信息
message UpdateUserInfo{
  int32 id =1;
  string nickName =2;
  uint64 birthday =3;
  string gender = 4;

}
//创建用户
message CreateUserinfo{
  string nickName =1;
  string passWord =2;
  string mobile =3;
}

message IdRequest {
  int32 id = 1;
}